feat: implement member fetching from API and transform data for frontend

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 # Member Registration Streamlit App URL
 NEXT_PUBLIC_MEMBER_REGISTRATION_URL=https://www.jaram.net/
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
